# pingplop

./: .dockerignore  .editorconfig  .env.docker  .env.example  .eslintrc.cjs  .gitignore  .goreleaser.yaml  .ignore  .ncurc.json  .prettierignore  .swcrc  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE  README.md  Taskfile.yml  air.toml  biome.json  dbconfig.yml  docker-compose.yml  esbuild.config.js  fly.example.toml  fly.toml  go.mod  go.sum  golangci.yml  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: FUNDING.yaml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/setup-sdk/: action.yml
.github/workflows/: ci-actions.yml  ci-build.yml  ci-test.yml  clean-cache.yml  release.yaml
.husky/: pre-commit
.parcel-cache/: 060ee06a7bb01f04-0  505f6b45f2d8d33a-0  851ab892931d3698-0  bc5230249351e545-0  data.mdb  e55df354120322fb.txt  lock.mdb
bruno/: bruno.json  collection.bru  package.json  pnpm-lock.yaml
bruno/Authentication/: Identify User.bru  Login with email.bru  Password Recovery.bru  Password Reset.bru  User Registration.bru
bruno/General Resources/: Health check.bru
bruno/Incident Management/: List all incidents.bru
bruno/Site Monitoring/: List all monitors.bru
bruno/User Management/: Delete User.bru  List all users.bru  Update User.bru  User Detail.bru
bruno/environments/: development.bru
cmd/app/: main.go
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/corelib/: Cargo.toml
crates/corelib/migrations/: 0001_create_auth_tables.down.sql  0001_create_auth_tables.up.sql  0001_initialize_schema.down.sql  0001_initialize_schema.up.sql  0002_create_base_tables.down.sql  0002_create_base_tables.up.sql
crates/corelib/src/: dbx.rs  lib.rs  prelude.rs
crates/corelib/src/http/: error.rs  mod.rs  response.rs
crates/handler/: Cargo.toml
crates/handler/assets/css/: _components.css
crates/handler/assets/js/: app.js
crates/handler/src/: api.rs  home.rs  lib.rs
crates/handler/src/admin/: incidents.rs  monitors.rs  overview.rs  pages.rs  settings.rs
crates/handler/src/auth/: mod.rs
crates/handler/static/js/: main.js  main.js.map
crates/handler/templates/: incidents.html  index.html  maintenance.html  not-found.html
crates/handler/templates/admin/: heartbeat.html  index.html  monitors.html  pages.html
crates/handler/templates/assets/: _base.css  main.css
crates/handler/templates/assets/js/: app.js
crates/handler/templates/auth/: login.html  register.html  reset-password.html
crates/handler/templates/layouts/: _footer.html  admin.html  base.html
crates/migrator/: Cargo.toml
crates/migrator/src/: config.rs  lib.rs  migrate.rs  status.rs  utils.rs
crates/migrator/src/driver/: libsql.rs  mod.rs  sqlite.rs
crates/server/: Cargo.toml
crates/server/assets/css/: _components.css
crates/server/assets/js/: app.js
crates/server/src/: lib.rs  main.rs  routes.rs  server.rs
crates/server/src/handler/: home.rs  mod.rs
crates/server/src/handler/admin/: heartbeat.rs  mod.rs  settings.rs
crates/server/src/handler/auth/: login.rs  recovery.rs  register.rs
crates/server/static/: robots.txt
crates/server/templates/: incidents.html  not-found.html
crates/server/templates/admin/: incidents.html  settings.html
crates/server/templates/auth/: forgot-password.html  login.html  register.html
crates/server/templates/layouts/: _header.html  admin.html  base.html
crates/worker/: Cargo.toml
crates/worker/src/: main.rs
docs/: deployment.mdx  mint.json  quickstart.mdx
docs/api-reference/: openapi.json
docs/essentials/: images.mdx
internal/app/: healthcheck.go  routes.go  server.go
internal/app/handler/: auth_handler.go  error_handler.go  spa_handler.go  user_handler.go
internal/cli/: migrate.go  root.go  version.go
internal/middleware/jwtauth/: jwtauth.go
internal/model/: user.go
internal/models/: user.go
internal/repository/: auth_repo.go  repository.go  user_repo.go
meta/: meta.go
migrations/: 0001_create_auth_tables.down.sql  0001_create_auth_tables.up.sql  0002_create_base_tables.down.sql  0002_create_base_tables.up.sql  20231105142749-create_users_table.sql  20231112223730-create_audit_logs_table.sql  20231112225723-create_users_table.sql  20231112225731-create_passwords_table.sql  20231112225745-create_sessions_table.sql  20231112225759-create_tokens_table.sql  20231112225820-create_oauth_accounts_table.sql  20231112232933-default_user_seeder.sql  20231118014606-create_workspace_tables.sql  20231118014812-create_monitor_tables.sql  20231118014826-create_incident_tables.sql  20231118014849-create_pages_table.sql  20231118021022-create_integrations_table.sql  20231118021051-create_notification_tables.sql  20231118120404-default_user_seeder.sql  embed.go
pkg/dbx/: dbx.go  mapper.go  migrate.go
pkg/env/: env.go
pkg/jwt/: jwt.go
pkg/middleware/jwtauth/: jwtauth.go  jwtauth_test.go
pkg/spa/: spa.go
pkg/utils/: crypto.go  request_helper.go  utils.go
web/: app.spec.tsx  embed.go  index.html  main.tsx  setup-test.ts
web/app/: app.spec.tsx  app.tsx  routes.tsx
web/assets/styles/: global.css
web/components/: common.tsx  empty-slot.tsx  page-loader.tsx  tw-indicator.tsx
web/components/layouts/: app-layout.tsx  auth-layout.tsx  home-layout.tsx  index.ts
web/libraries/api-client/: endpoint.ts  index.ts
web/libraries/auth-guard/: context.ts  hooks.tsx  index.ts  provider.tsx  request.ts  store.ts
web/pages/: not-found.tsx  welcome.tsx
web/pages/auth/: index.ts  layout.tsx
web/pages/auth/login/: index.tsx
web/pages/dashboard/: index.ts  index.tsx  layout.tsx
web/pages/dashboard/accounts/: index.tsx
web/pages/dashboard/billing/: index.tsx
web/pages/dashboard/heartbeat/: index.tsx
web/pages/dashboard/incidents/: index.tsx
web/pages/dashboard/integrations/: index.tsx
web/pages/login/: index.tsx
web/pages/statuspage/: incidents.tsx  index.ts  layout.tsx  maintenance.tsx  status.tsx
web/sample/: index.html
web/utils/: config.ts  logger.ts
(+5 files in other folders)
