# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
  "crates/corelib",
  "crates/server",
  "crates/worker",
]

[workspace.package]
version = "0.0.6"
authors = ["Aris Ripandi <pingplop@skiff.com>"]
repository = "http://github.com/pingplop/pingplop"
documentation = "https://github.com/pingplop/pingplop"
categories = ["command-line-utilities", "web-programming"]
keywords = ["axum", "api", "application", "sqlite", "monitoring"]
license = "AGPL-3.0-or-later"
rust-version = "1.75"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "^1.0" }
async-trait = { version = "0.1" }
axum = { version = "0.7.3", features = ["multipart", "macros", "tracing"] }
axum-extra = { version = "0.9.1", features = ["typed-header", "cookie-private"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "serde"] }
hyper = { version = "1.1", features = ["full"] }
libsql-client = { version = "0.33.2", features = ["http"] }
once_cell = { version = "1.19" }
rand = { version = "0.8" }
reqwest = { version = "^0.11", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
thiserror = { version = "1.0" }
tokio = { version = "^1.34", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
xid = { version = "1.0.3" }

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true         # Enable Link Time Optimization
opt-level = "z"    # Optimize for binary size, but also turn off loop vectorization..
codegen-units = 1  # Reduce number of codegen units to increase optimizations.
panic = "abort"    # Abort on panic
strip = true       # Automatically strip symbols from the binary.
debug = false      # Disable debug on production build.

# @ref: https://djc.github.io/askama/performance.html
[profile.dev.package.askama_derive]
opt-level = 3
