[package]
name = "pingplop"
default-run = "pingplop"
description = "Lightweight, open-source website uptime monitoring tool."
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]

# Shared crates
anyhow = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
