[package]
name = "pingplop"
default-run = "pingplop"
description = "Lightweight, open-source website uptime monitoring tool."
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
# Internal crates
corelib = { path = "../corelib" }
migrator = { path = "../migrator" }

# Shared crates
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
libsql-client = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
xid = { workspace = true }

# Private crates
askama = { version = "0.12.1", features = ["serde", "with-axum"] }
askama_axum = { version = "0.4" }
build-time = { version = "0.1.3" }
dotenvy = { version = "^0.15" }
http-body-util = { version = "0.1.0" }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
jsonwebtoken = { version = "9.2" }
mrml = { version = "3.0", features = ["async"] }
tower = { version = "0.4", features = ["buffer", "limit", "util"] }
tower-http = { version = "0.5", features = ["timeout", "trace", "fs", "cors", "request-id", "normalize-path"] }
tower-layer = { version = "0.3" }
tower-service = { version = "0.3" }

[dependencies.clap]
version = "4.4"
default-features = false
features = ["derive", "color", "help", "std"]
